RESOLVED FIXED197026
AX: AccessibilityObject::parentObject() doesn't need to be pure virtual
https://bugs.webkit.org/show_bug.cgi?id=197026
Summary AX: AccessibilityObject::parentObject() doesn't need to be pure virtual
Devin Rousso
Reported 2019-04-17 11:13:18 PDT
Rather than expect all subclasses to override `parentObject`, we can provide a stub implementation that does nothing so that we never have to worry about calling a pure virtual function (if we missed a subclass).
Attachments
Patch (1.67 KB, patch)
2019-04-17 11:23 PDT, Devin Rousso
no flags
Patch (1.67 KB, patch)
2019-04-17 11:28 PDT, Devin Rousso
no flags
Devin Rousso
Comment 1 2019-04-17 11:13:32 PDT Comment hidden (obsolete)
Radar WebKit Bug Importer
Comment 2 2019-04-17 11:13:50 PDT Comment hidden (obsolete)
Devin Rousso
Comment 3 2019-04-17 11:23:15 PDT
Devin Rousso
Comment 4 2019-04-17 11:26:52 PDT
Devin Rousso
Comment 5 2019-04-17 11:28:01 PDT
WebKit Commit Bot
Comment 6 2019-04-17 12:29:00 PDT
Comment on attachment 367656 [details] Patch Clearing flags on attachment: 367656 Committed r244394: <https://trac.webkit.org/changeset/244394>
WebKit Commit Bot
Comment 7 2019-04-17 12:29:01 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.