AX: AccessibilityObject::parentObject() doesn't need to be pure virtual https://bugs.webkit.org/show_bug.cgi?id=197026 <rdar://problem/49448209>

Reviewed by Timothy Hatcher.

* accessibility/AccessibilityObject.h:
(WebCore::AccessibilityObject::parentObject const):


Canonical link: https://commits.webkit.org/211280@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244394 268f45cc-cd09-0410-ab3c-d52691b4dbfc